fix margin on menu and hide y overflow on sides section

--- a/sites/all/themes/wallstreet_theme/sass/layout.sass
+++ b/sites/all/themes/wallstreet_theme/sass/layout.sass
@@ -109,7 +109,7 @@
 .pizzas-section
   @include media($desktop)
     @include span-columns(6.5)
-    margin-right: 11px !important
+    margin-right: 2.7em !important
     overflow-x: hidden
 
 .sandwiches-section
@@ -126,6 +126,7 @@
   @include media($desktop)
     @include span-columns(6.5)
     overflow-x: hidden
+    overflow-y: hidden
 
 #header
   background-color: black !important
